hope this works

--- a/index.html
+++ b/index.html
@@ -2,9 +2,17 @@
 <html>
     <body>
         <h1>HW 1 Links</h1>
-        <a href="../kjp1999.github.io/Website/mypage.html">mypage</a>
-        <a href="../kjp1999.github.io/Website/mypage_bootstrap.html">mypage_bootstrap</a>
-        <a href="../kjp1999.github.io/Website/projects.html">projects</a>
-        <a href="../kjp1999.github.io/Website/form.html">form</a>
+        <div>
+            <a href="../kjp1999.github.io/Website/mypage.html">mypage</a>
+        </div>
+        <div>
+            <a href="../kjp1999.github.io/Website/mypage_bootstrap.html">mypage_bootstrap</a>
+        </div>
+        <div>
+            <a href="../kjp1999.github.io/Website/projects.html">projects</a>
+        </div>
+        <div>
+            <a href="../kjp1999.github.io/Website/form.html">form</a>
+        </div>
     </body>
 </html>
